--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 spring.flyway.default-schema=nft
-spring.datasource.hikari.schema=nft
+#spring.datasource.hikari.schema=nft
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 
 
@@ -12,6 +12,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # This is important! Hibernate ddl auto (create, create-drop, validate, update)
 # validate первіряє збіг моделі як @Entity та в базі даних
-spring.jpa.hibernate.ddl-auto = validate
+#spring.jpa.hibernate.ddl-auto = validate
 
-#spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-on-migrate=true
