--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=password
 
 spring.flyway.default-schema=nft
 #spring.datasource.hikari.schema=nft
-spring.jpa.hibernate.use-new-id-generator-mappings= false
+#spring.jpa.hibernate.use-new-id-generator-mappings= false
 
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -12,6 +12,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # This is important! Hibernate ddl auto (create, create-drop, validate, update)
 # validate первіряє збіг моделі як @Entity та в базі даних
-#spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = validate
 
 spring.flyway.baseline-on-migrate=true
